<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_color">

    <ImageView
        android:id="@+id/header"
        android:layout_width="434dp"
        android:layout_height="76dp"
        android:background="@color/login_color"
        android:backgroundTint="@color/login_color"
        android:backgroundTintMode="src_in"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toTopOf="@+id/tableLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/login_color" />

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="434dp"
        android:layout_height="703dp"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/header">

        <TableRow android:layout_marginLeft="10dp" android:layout_marginTop="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/invasions_col1"
                android:textSize="16dp"
                android:textColor="@color/hint_color" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/invasions_col2"
                android:textSize="16dp"
                android:textColor="@color/hint_color" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/invasions_col3"
                android:textSize="16dp"
                android:textColor="@color/hint_color" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/invasions_col4"
                android:textSize="16dp"
                android:textColor="@color/hint_color" />
        </TableRow>

    </TableLayout>

</androidx.constraintlayout.widget.ConstraintLayout>