<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/confirmation_container"
    android:layout_width="match_parent"
    android:background="@color/main_color"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/conf_text"
        android:layout_width="285dp"
        android:layout_height="60dp"
        android:layout_marginStart="63dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="63dp"
        android:gravity="center"
        android:text="@string/email_verification_message"
        android:textColor="@color/login_text_color"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title" />

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="97dp"
        android:layout_marginTop="206dp"
        android:layout_marginEnd="96dp"
        android:layout_marginBottom="8dp"
        android:text="@string/email_verification"
        android:textColor="@color/login_text_color"
        android:textSize="28sp"
        app:layout_constraintBottom_toTopOf="@+id/conf_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/confirm_button"
        android:layout_width="210dp"
        android:layout_height="56dp"
        android:layout_marginStart="101dp"
        android:layout_marginEnd="101dp"
        android:layout_marginBottom="251dp"
        android:backgroundTint="@color/login_color"
        android:text="@string/confirm"
        android:textColor="@color/login_text_color"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/code_field" />

    <EditText
        android:id="@+id/code_field"
        android:layout_width="288dp"
        android:layout_height="47dp"
        android:layout_marginStart="63dp"
        android:layout_marginTop="29dp"
        android:layout_marginEnd="60dp"
        android:layout_marginBottom="35dp"
        android:background="@drawable/edit_text_background"
        android:ems="10"
        android:inputType="text"
        android:maxLines="1"
        android:hint="@string/verification_code"
        android:textColorHint="@color/hint_color"
        app:layout_constraintBottom_toTopOf="@+id/confirm_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/conf_text" />

    <ProgressBar
        android:id="@+id/loading"
        android:layout_width="35dp"
        android:layout_height="36dp"
        android:layout_gravity="center"
        android:layout_marginBottom="392dp"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/confirm_button"
        app:layout_constraintEnd_toEndOf="@+id/code_field"
        app:layout_constraintHorizontal_bias="0.045"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>