<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_color"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".ui.login.LoginActivity">

    <EditText
        android:id="@+id/username"
        android:layout_width="291dp"
        android:layout_height="48dp"
        android:layout_marginTop="220dp"
        android:layout_marginBottom="180dp"
        android:background="@drawable/edit_text_background"
        android:hint="@string/prompt_username"
        android:inputType="textEmailAddress"
        android:selectAllOnFocus="true"
        android:textColor="@color/login_text_color"
        android:textColorHint="@color/login_text_color"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/checkBox"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/password"
        android:layout_width="290dp"
        android:layout_height="48dp"
        android:layout_marginTop="36dp"
        android:autofillHints=""
        android:background="@drawable/edit_text_background"
        android:hint="@string/prompt_password"
        android:imeActionLabel="@string/action_log_in"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        android:selectAllOnFocus="true"
        android:textColor="@color/login_text_color"
        android:textColorHint="@color/login_text_color"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/username" />

    <Button
        android:id="@+id/login"
        android:layout_width="203dp"
        android:layout_height="63dp"
        android:layout_marginTop="133dp"
        android:layout_marginBottom="132dp"
        android:backgroundTint="@color/login_color"
        android:text="@string/action_log_in"
        android:textColor="@color/login_text_color"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/signup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/username" />

    <Button
        android:id="@+id/signup"
        android:layout_width="204dp"
        android:layout_height="48dp"
        android:layout_marginBottom="140dp"
        android:backgroundTint="@color/signup_color"
        android:text="@string/action_sign_up"
        android:textColor="@color/login_text_color"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkBox" />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginBottom="34dp"
        android:backgroundTint="@color/login_text_color"
        android:buttonTint="@color/white"
        android:text="@string/stay_logged"
        android:textColor="@color/login_text_color_2"
        app:layout_constraintBottom_toTopOf="@+id/signup"
        app:layout_constraintStart_toStartOf="@+id/login"
        app:layout_constraintTop_toBottomOf="@+id/username" />

    <ProgressBar
        android:id="@+id/loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="64dp"
        android:layout_marginBottom="64dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/password"
        app:layout_constraintStart_toStartOf="@+id/password"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.3" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="147dp"
        android:layout_height="155dp"
        android:layout_marginStart="110dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="110dp"
        android:contentDescription="Account im"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/login_image" />

</androidx.constraintlayout.widget.ConstraintLayout>