<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_color">

    <TextView
        android:id="@+id/projectName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="6dp"
        android:background="@null"
        android:ems="10"
        android:gravity="center_horizontal"
        android:text="@string/project_name"
        android:textColor="@color/login_text_color"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/email"
        android:layout_width="136dp"
        android:layout_height="43dp"
        android:layout_marginStart="57dp"
        android:layout_marginEnd="57dp"
        android:layout_marginBottom="14dp"
        android:background="@drawable/edit_text_background"
        android:ems="10"
        android:hint="@string/prompt_email"
        android:inputType="textEmailAddress"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@+id/phoneTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailTitle"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/lastNameTitle"
        android:layout_width="112dp"
        android:layout_height="24dp"
        android:layout_marginStart="43dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="72dp"
        android:background="@null"
        android:ems="10"
        android:gravity="left"
        android:inputType="textPersonName"
        android:text="@string/prompt_last_name"
        android:textColor="@color/login_text_color"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/lastName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/firstNameTitle"
        app:layout_constraintTop_toBottomOf="@+id/projectName" />

    <EditText
        android:id="@+id/phoneTitle"
        android:layout_width="112dp"
        android:layout_height="24dp"
        android:layout_marginStart="67dp"
        android:layout_marginEnd="232dp"
        android:layout_marginBottom="2dp"
        android:background="@null"
        android:ems="10"
        android:gravity="left"
        android:inputType="text"
        android:text="@string/prompt_phone"
        android:textColor="@color/login_text_color"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/phone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email" />

    <EditText
        android:id="@+id/telegram"
        android:layout_width="136dp"
        android:layout_height="43dp"
        android:layout_marginBottom="40dp"
        android:background="@drawable/edit_text_background"
        android:ems="10"
        android:hint="@string/prompt_telegram"
        android:inputType="text"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@+id/phone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.817"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phoneTitle2" />

    <EditText
        android:id="@+id/first_name"
        android:layout_width="136dp"
        android:layout_height="43dp"
        android:layout_marginStart="64dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="11dp"
        android:background="@drawable/edit_text_background"
        android:ems="10"
        android:hint="@string/prompt_first_name"
        android:inputType="textPersonName"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@+id/emailTitle"
        app:layout_constraintEnd_toStartOf="@+id/lastName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/firstNameTitle" />

    <Button
        android:id="@+id/signup"
        android:layout_width="203dp"
        android:layout_height="63dp"
        android:layout_marginStart="104dp"
        android:layout_marginEnd="104dp"
        android:layout_marginBottom="84dp"
        android:backgroundTint="@color/login_color"
        android:text="@string/action_sign_up"
        android:textColor="@color/login_text_color"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/terms" />

    <EditText
        android:id="@+id/username"
        android:layout_width="297dp"
        android:layout_height="46dp"
        android:layout_marginStart="57dp"
        android:layout_marginEnd="57dp"
        android:background="@drawable/edit_text_background"
        android:ems="10"
        android:hint="@string/prompt_username"
        android:inputType="textPersonName"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@+id/passwordTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/usernameTitle" />

    <TextView
        android:id="@+id/usernameTitle"
        android:layout_width="112dp"
        android:layout_height="24dp"
        android:layout_marginStart="66dp"
        android:layout_marginEnd="233dp"
        android:background="@null"
        android:ems="10"
        android:gravity="left"
        android:inputType="textPersonName"
        android:text="@string/prompt_username"
        android:textColor="@color/login_text_color"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/username"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phone" />

    <EditText
        android:id="@+id/lastName"
        android:layout_width="136dp"
        android:layout_height="43dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="57dp"
        android:layout_marginBottom="11dp"
        android:background="@drawable/edit_text_background"
        android:ems="10"
        android:hint="@string/prompt_last_name"
        android:inputType="textPersonName"
        android:textColor="@color/login_text_color_2"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@+id/phoneTitle2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/first_name"
        app:layout_constraintTop_toBottomOf="@+id/lastNameTitle" />

    <EditText
        android:id="@+id/phone"
        android:layout_width="297dp"
        android:layout_height="46dp"
        android:layout_marginStart="57dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="57dp"
        android:layout_marginBottom="13dp"
        android:background="@drawable/edit_text_background"
        android:ems="10"
        android:hint="@string/prompt_phone"
        android:inputType="phone"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@+id/usernameTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phoneTitle" />

    <TextView
        android:id="@+id/emailTitle"
        android:layout_width="112dp"
        android:layout_height="24dp"
        android:layout_marginStart="66dp"
        android:layout_marginTop="11dp"
        android:layout_marginEnd="233dp"
        android:background="@null"
        android:ems="10"
        android:gravity="left"
        android:text="@string/prompt_email"
        android:textColor="@color/login_text_color"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/first_name" />

    <TextView
        android:id="@+id/passwordTitle"
        android:layout_width="112dp"
        android:layout_height="24dp"
        android:layout_marginStart="65dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="234dp"
        android:background="@null"
        android:ems="10"
        android:gravity="left"
        android:text="@string/prompt_password"
        android:textColor="@color/login_text_color"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/username" />

    <EditText
        android:id="@+id/password"
        android:layout_width="297dp"
        android:layout_height="46dp"
        android:layout_marginStart="55dp"
        android:layout_marginEnd="59dp"
        android:layout_marginBottom="9dp"
        android:background="@drawable/edit_text_background"
        android:ems="10"
        android:hint="@string/prompt_password"
        android:inputType="textPassword"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@+id/terms"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordTitle" />

    <TextView
        android:id="@+id/phoneTitle2"
        android:layout_width="112dp"
        android:layout_height="24dp"
        android:layout_marginStart="49dp"
        android:layout_marginTop="11dp"
        android:layout_marginEnd="72dp"
        android:background="@null"
        android:ems="10"
        android:gravity="left"
        android:text="@string/prompt_telegram"
        android:textColor="@color/login_text_color"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/telegram"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/emailTitle"
        app:layout_constraintTop_toBottomOf="@+id/lastName" />

    <TextView
        android:id="@+id/firstNameTitle"
        android:layout_width="112dp"
        android:layout_height="24dp"
        android:layout_marginStart="72dp"
        android:layout_marginTop="32dp"
        android:background="@null"
        android:ems="10"
        android:gravity="left"
        android:text="@string/prompt_first_name"
        android:textColor="@color/login_text_color"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/first_name"
        app:layout_constraintEnd_toStartOf="@+id/lastNameTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/projectName" />

    <CheckBox
        android:id="@+id/terms"
        android:layout_width="258dp"
        android:layout_height="36dp"
        android:layout_marginStart="55dp"
        android:layout_marginEnd="98dp"
        android:layout_marginBottom="8dp"
        android:backgroundTint="@color/login_text_color"
        android:buttonTint="@color/white"
        android:text="@string/terms_of_conditions"
        android:textColor="@color/login_text_color_2"
        app:layout_constraintBottom_toTopOf="@+id/signup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password" />

    <ProgressBar
        android:id="@+id/loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="64dp"
        android:layout_marginBottom="64dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/password"
        app:layout_constraintStart_toStartOf="@+id/password"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.3" />

</androidx.constraintlayout.widget.ConstraintLayout>
